force-app/main/default/objects/cpm__Inbound_Report__c/fields/SFFR_Bank_Batch__c.field-meta.xml
<CustomField>
    <fullName>SFFR_Bank_Group__c</fullName>
    <label>Bank </label>
    <length>10</length>
    <type>Text</type>
</CustomField>