force-app/main/default/objects/cpm__Inbound_Report__c/fields/SFFR_Bank_Payment_Group_Ext_Key__c.field-meta.xml
<CustomField>
    <fullName>SFFR_Bank_Payment_Group_Ext_Key__c</fullName>
    <label>Bank Payment Group External Key</label>
    <length>10</length>
    <type>Text</type>
</CustomField>