force-app/main/default/objects/cpm__Inbound_Report__c/fields/SFFR_Campaign_Key__c.field-meta.xml
<CustomField>
    <fullName>SFFR_Campaign_Key__c</fullName>
    <label>Campaign key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>