force-app/main/default/objects/cpm__Inbound_Report__c/fields/SFFR_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>SFFR_Contact_Email__c</fullName>
    <label>Contact email</label>
    <type>Email</type>
</CustomField>