force-app/main/default/objects/cpm__Inbound_Report__c/fields/SFFR_Contact_First_Name__c.field-meta.xml
<CustomField>
    <fullName>SFFR_Contact_First_Name__c</fullName>
    <label>Contact First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>