force-app/main/default/objects/cpm__Inbound_Report__c/fields/SFFR_Contact_Mobile__c.field-meta.xml
<CustomField>
    <fullName>SFFR_Contact_Mobile__c</fullName>
    <label>Contact mobile</label>
    <type>Phone</type>
</CustomField>