force-app/main/default/objects/cpm__Inbound_Report__c/fields/SFFR_Fullfilment_Batch__c.field-meta.xml
<CustomField>
    <fullName>SFFR_Fullfilment_Batch__c</fullName>
    <label>Fullfilment batch</label>
    <length>10</length>
    <type>Text</type>
</CustomField>