force-app/main/default/objects/cpm__Inbound_Report__c/fields/SFFR_Payer_Contact__c.field-meta.xml
<CustomField>
    <fullName>SFFR_Payer_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payer Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Inbound Reports (Payer Contact)</relationshipLabel>
    <relationshipName>Inbound_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>