force-app/main/default/objects/cpm__Inbound_Report__c/fields/SFFR_Payer_email__c.field-meta.xml
<CustomField>
    <fullName>SFFR_Payer_email__c</fullName>
    <label>Payer email</label>
    <type>Email</type>
</CustomField>