force-app/main/default/objects/cpm__Inbound_Report__c/fields/SFFR_Payment_Key__c.field-meta.xml
<CustomField>
    <fullName>SFFR_Payment_Key__c</fullName>
    <label>Payment Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>